(#451) Fix inventory/equipment and message update in store.
(#496) Give wands and staves EASY_KNOW, so they no longer need ID.
(#562) Ego-items are now never squelched as "bad" or "average".
(#599) Above 18, stat drain and gain always works in intervals of 10 points
(#561) 'n', when used to fire missiles, no longer ignores confusion.
(#613) Prevent {!*} prompting for harmless actions.
(#641) Fix Morgoth artifacts.
(#654) Allow pseudo to work whilst resting.
(#672) Fix Evenstar activation message.
(#673) Fix description of Identify scrolls.
(#676) Fixed character creation help.
(#683) Fix !Berserk Strength being unsellable.
(#685) Scrolls of Create Trap now ID on use.
(#688) Mages once more get a message when they can't learn new spells from a book.
(#690) Item descriptions now take player speed into account.
(#691) Make of Open Wounds similar to ther pval-less rings in that it doesn't need ID.
(#694) Fix dropped rods recharging, and any other rod-related oddities.
(#698) Added '!' to 'R' prompt to rest until mana or hp are full.
(#696) Put character name back onto the dump.
(#711, #764) Fix descriptions of area-of-effect detection.
(#712) Autoinscribe items in the first inventory slot.
(#721) Searching bonues are now displayed as a % increase to match the character screen.
(#722) Fix spoilers and wizard mode cheat info not displaying magical abilities
(#723) Fix support for playing in the terminal on OS X 10.4.
(#724) Critical hit messages come after regular hit messages again.
(#725) *Remove Curse* now removes all curses again.
(#728) Pseudo-by-use should not downgrade {special} to {excellent}
(#729) Random teleportation disturbs the player.
(#730) Mention control+[ANU] in mosnter recall '/' prompt.
(#733) Curse Weapon/Amrour no longer blast your objects completely, they just curse them a bit.
(#734) Stop displaying the store slot bought when purchasing.
(#735) Remove weak pseudo-ID.
(#738) Add messages for unidentified obviouslly {excellent} items.