@@ -636,6 +636,7 @@ int rd_player(u32b version)
 
 	rd_s16b(&p_ptr->ht_birth);
 	rd_s16b(&p_ptr->wt_birth);
+	if (version >= 2) rd_s16b(&p_ptr->sc_birth);
 	rd_s32b(&p_ptr->au_birth);
 
 	strip_bytes(4);
@@ -675,6 +676,7 @@ int rd_player(u32b version)
 	/* More info */
 	strip_bytes(8);
 	rd_s16b(&p_ptr->sc);
+	if (version < 2) p_ptr->sc_birth = p_ptr->sc;
 	strip_bytes(2);
 
 	/* Read the flags */
